codepkg/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Available_Case_Inventory__c</fullName>
        <label>Available Case Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Available_Transitional_Inventory__c</fullName>
        <label>Available Transitional Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <description>Batch Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carton_Inventory__c</fullName>
        <label>Carton Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_Of_Origin__c</fullName>
        <description>Country Of Origin</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Country Of Origin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Codes__c</fullName>
        <description>Lock Codes</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Lock Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Status_Code__c</fullName>
        <description>Product Status Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Product Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Warehouse_Product__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Inventory__c</fullName>
        <label>Remaining Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU_Description__c</fullName>
        <description>SKU Description</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU_Id__c</fullName>
        <description>SKU ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SKU Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <description>Serial Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sync_Date__c</fullName>
        <description>Sync Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Sync Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TX_Number__c</fullName>
        <description>TX Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>TX Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Available_Inventory__c</fullName>
        <label>Total Available Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SKU_Inventory__c</fullName>
        <description>Total SKU Inventory</description>
        <label>Total SKU Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unavailable_Inventory__c</fullName>
        <label>Total Unavailable Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unavailable_Transitional_inventory__c</fullName>
        <label>Unavailable Transitional inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_Time__c</fullName>
        <description>Inventory Updated Time</description>
        <label>Updated Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Warehouse_Code_And_SKU_Id__c</fullName>
        <description>This is external Id field. It is a combination of Warehouse code and SKU Id. It is joined by &quot;_&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Warehouse Code And SKU Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Warehouse_Code__c</fullName>
        <description>Warehouse Code</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Warehouse Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to warehouse product.</description>
        <label>Warehouse Product</label>
        <referenceTo>Warehouse_Product__c</referenceTo>
        <relationshipLabel>Inventories</relationshipLabel>
        <relationshipName>Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <formula>Warehouse_Product__r.Warehouse__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warehouse</label>
        <type>Text</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>SKU_Id__c</columns>
        <columns>Total_SKU_Inventory__c</columns>
        <columns>Total_Available_Inventory__c</columns>
        <columns>Remaining_Inventory__c</columns>
        <columns>Warehouse_Code__c</columns>
        <columns>Warehouse__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Warehouse__c</field>
            <operation>contains</operation>
            <value>UPS Citrus</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>